Removed scrollbar from new issue div

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -2,8 +2,8 @@
     margin: auto;
     margin-top: 50px;
     max-width: 90%;
-    max-height: 70vh;
-    overflow-y: scroll;
+    /*max-height: 70vh;
+    overflow-y: scroll;*/
 }
 
 .latest-issue-title {
@@ -21,7 +21,7 @@
     width:35%;
     float: left;
     height: auto; 
-    margin: 5%;
+    /*margin: 5%;*/
     margin-right: 10%;
     display: inline-block;
     text-align: justify;
@@ -120,7 +120,7 @@
 
 .latest-issue .description-li{
     margin: 5%;
-    margin-top: 0%;
+    /*margin-top: 0%;*/
     /*float: left;*//*
    height:400px;
    width:auto;
